src/tui/tests/widgets/popups/error/snapshots/rmcl__tui__widgets__popups__error__render_tests__info_level_renders.snap
---
source: src/tui/tests/widgets/popups/error/render.rs
expression: term.backend()
---
"╭ INFO ────────────────────────────────╮"
"│Reloaded config                       │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
