src/tui/tests/widgets/popups/error/snapshots/rmcl__tui__widgets__popups__error__render_tests__narrow_frame_renders.snap
---
source: src/tui/tests/widgets/popups/error/render.rs
expression: term.backend()
---
"╭ WARN ──────────╮"
"│Short message   │"
"│                │"
"│                │"
"╰────────────────╯"
